crates/strider/tests/snapshots/v2__arm__calls__nested_3deep.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x610:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "v9" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v9" [color="#888888", style=dashed];
  "v9" -> "7" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "v10" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v10" [color="#888888", style=dashed];
  "v10" -> "7" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "v11" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v11" [color="#888888", style=dashed];
  "v11" -> "7" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "8" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v12" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "13" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "13" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "14" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "15" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "6" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "15" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "16" -> "15" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "17" -> "15" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "16" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "18" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "19" -> "14" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "20" -> "14" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "20" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "19" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "16" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
